src/styles/global.scss
@use '../assets/styles/variables.scss' as vars;

html {
  font-size: 1.2rem;
}

body {
  margin: 0;
  padding: 0;
  min-height: 100vh;
  height: 100%;
  width: 100vw;
  background-color: black;
  color: white;
}

p {
  color: vars.$offWhite;
}

ul {
  color: vars.$offWhite;
}

#app {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
}

h1 {
  font-weight: 100;
  font-size: 2em;
}

h2 {
  font-weight: 100;
}

a {
  color: vars.$white;
}

ol {
  padding: 0;
  margin: 0;
}

input,
select,
textarea {
  font-size: inherit;
  font-family: inherit;
  color: inherit;
  background-color: inherit;
  color: inherit;
  padding: 8px;
  border: 1px solid vars.$white;
}

